# fin-be

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  setup.sh
.claude/: launch.json  settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_categorization.py  003_remove_account_currency.py  004_normalize_bank_accounts.py  005_add_account_owner_type.py  006_add_falabella_bank.py  007_add_plataformas_category.py  008_add_users_table.py  009_add_ahorros_ingreso_inversion.py  010_add_nequi_bank_and_file_password.py  011_add_movimiento_entre_bancos_category.py  012_add_user_roles_and_invitations.py  013_populate_account_user_id.py  014_dynamic_categories.py
app/: main.py
app/api/: deps.py  query_helpers.py  router.py
app/api/routes/: accounts.py  admin.py  auth.py  categories.py  dashboard.py  etl.py  files.py  transactions.py
app/core/: auth.py  config.py
app/db/: session.py
app/etl/: categorization.py  dedupe.py  keyword_learner.py  normalization.py  pipeline.py
app/models/: __init__.py  account.py  category.py  category_example.py  category_keyword.py  enums.py  invitation.py  raw_row.py  source_file.py  transaction.py  user.py
app/schemas/: category.py  dashboard.py  etl.py  file.py  transaction.py  types.py
app/services/: llm_client.py  storage.py
app/utils/: encryption.py  hashing.py  text.py
scripts/: create_account.py  seed_categories.py  test_falabella_parser.py  test_rappicard_parser.py
(+5 files in other folders)
