[project]
name = "finanzas-backend"
version = "0.1.0"
description = "Personal finance ETL + API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "pikepdf>=9.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "supabase>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
